Fixed z-index issue with popups

--- a/pootle/static/css/suttacentral.css
+++ b/pootle/static/css/suttacentral.css
@@ -6,7 +6,7 @@
     position: absolute;
     display: inline-block;
     background: #F7D1C2;
-    z-index: 103;
+    z-index: 500;
     padding: 1px;
     border: 1px solid #ccc;
     border-radius: 3px;
